<resources>

    <string name="app_name">Play Activity</string>
    <string name="label_ip">IP:</string>
    <string name="playsong">Play Song</string>
    <string name="label_port">Port:</string>
    <string name="printsong">Print Song on Debug</string>
    <string name="connect">Connect</string>
    <string name="clear">Clear</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">381Project2</string>
    <string name="label_myip">My IP:</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="refresh_socket">Show Sock.</string>
    <string name="song1">Song 1</string>
    <string name="currentTime">0:00</string>
    <string name="songTime">0:00</string>
    <string name="timeDivider">/</string>
    <string name="songTimeSecond">00</string>
    <string name="songTimeMinute">0</string>
    <string name="timeColon">:</string>
    <string name="currentTimeMinute">0</string>
    <string name="currentTimeSeconds">00</string>
    <string name="PlayModeOrder">Normal</string>
    <string name="PlayModeShuffle">Shuffle</string>
    <string name="PlayModeRepeatOn">RepeatOne</string>
    <string name="PlayModeRepeatOff">RepeatList</string>

</resources>