<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    	<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="  "
         android:textSize="6sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="playSong"
            android:text="Play"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          	android:layout_weight="0.75"
            android:onClick="pauseSong"
            android:text="Pause" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:onClick="upVolume"
            android:text="Up" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:onClick="downVolume"
            android:text="Down" />
    </LinearLayout>

    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
             android:layout_gravity="bottom">

            <LinearLayout
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:onClick="nextSong"
                    android:text="Next"
 					android:textSize="12sp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="prevSong"
                    android:text="Prev"
                    android:textSize="12sp" />

                <ToggleButton
                    android:id="@+id/toggleButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickPlayOrderMode"
                    android:text="@string/PlayModeOrder"
                    android:textOff="@string/PlayModeOrder"
                    android:textOn="@string/PlayModeShuffle"
                    android:textSize="12sp" />

                <ToggleButton
                    android:id="@+id/toggleButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClickPlayRepeatMode"
                    android:text="@string/PlayModeRepeatOff"
                    android:textOff="@string/PlayModeRepeatOff"
                    android:textOn="@string/PlayModeRepeatOn"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:layout_gravity="bottom" >
            
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentTimeMinute"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeColon"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentTimeSeconds"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeDivider"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songTimeMinute"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timeColon"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songTimeSecond"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="  "
         android:textSize="10sp"/>
    
    
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:max="100"
        android:minHeight="10dp"
        android:progress="0"
        android:progressDrawable="@drawable/myprogressbar" />

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      	android:text="  "
        android:textSize="10sp"/>
    
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Below are testing!!"
         android:textColor="#FF0"
         android:textSize="20sp"
         android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/viewText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222"
            android:ems="10"
            android:text="Volume = 4"
            android:textColor="#FFF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/viewText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:linksClickable="true"
            android:longClickable="true"
            android:onClick="sendMessage"
            android:text="@string/song1"
            android:textSize="30dp" >
        </TextView>

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendMessage"
            android:text="Button" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout><!-- android:onClick="sendMessage" -->
